== Planned

* Refactoring
  * JavaScript rewritten using CoffeeScript

== 0.7.0

* Enhancements

* Bug Fixes
  * Graphs now properly render when displaying project names that contain apostrophes

== 0.6.1

* Enhancements
  * Menu bar now sticks to the top of the window when the user scrolls down the page

== 0.6.0

* Enhancements
  * Update Rails to 3.1
  * Update Devise to 1.3.4 and Omniauth 0.2.6
  * Modified the authentication system so that it can authenticate correctly when behind a reverse proxy and within a firewall
  * Updated layout for consistency across projects
  
* Testing
  * Updated base test coverage for all unit and functional tests

== 0.5.0

* Fill In