@@ -4,6 +4,8 @@ class Frame < ActiveRecord::Base
   scope :current, :conditions => { :deleted => false }
   scope :with_project, lambda { |*args| { :conditions => ["frames.project_id IN (?) or (frames.project_id IS NULL and frames.user_id = ?)", args.first, args[1]] } }
   scope :search, lambda { |*args| {:conditions => [ 'LOWER(name) LIKE ? or LOWER(description) LIKE ?', '%' + args.first.downcase.split(' ').join('%') + '%', '%' + args.first.downcase.split(' ').join('%') + '%' ] } }
+  scope :active_today, lambda { |*args| { :conditions => ["frames.start_date <= DATE(?) and frames.end_date >= DATE(?)", Date.today, Date.today] } }
+  scope :active_date, lambda { |*args| { :conditions => ["frames.start_date <= DATE(?) and frames.end_date >= DATE(?)", args.first, args.first] } }
   
   # Model Validation
   validates_presence_of :name, :project_id, :start_date, :end_date
